<resources>
    <string name="title">SMART PAZHAYANGADI</string>
    <string name="app_name">Smart Pazhayangadi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="b1t">Bus</string>
    <string name="b2t">Train</string>
    <string name="b3t">Auto/Taxi</string>
    <string name="b4t">Medical</string>
    <string name="b5t">Education</string>
    <string name="b6t">Food/Stay</string>
    <string name="b7t">Shops</string>
    <string name="b8t">Banks</string>
    <string name="b9t">Movies Today</string>
    <string name="b10t">Important Numbers</string>
    <string name="b11t">Offices</string>
    <string name="b12t">Tourism</string>
    <string name="b13t">Notifications</string>
    <string name="b14t">About Us</string>

    <string name="title_activity_travel">Travel</string>
    <string name="b1t_t">TRAIN</string>
    <string name="b2t_t">BUS</string>
    <string name="b3t_t">TAXI</string>
    <string name="b4t_t">AUTO</string>

    <string name="title_activity_bustime">Bustime</string>

    <string name="title_activity_traintime">Traintime</string>
    <string name="b1tr_t">TO MANGALORE</string>
    <string name="b2tr_t">TO SHORNUR</string>

    <string name="title_activity_intro">Intro</string>
    <string name="title_activity_intro_ad">IntroAd</string>
    <string name="title_activity_tabbed">Tabbed</string>

    <string name="about_us">We are a group of newbies trying to serve you with information regarding Pazhayangadi. Our aim is to make the application an alternative encyclopedia of Pazhayangadi. We look forward to help all Pazhayangadians and those who are new to the region with updates and information.</string>
    <string name="title_activity_medical">Medical</string>

    <string name="banner_ad_unit_id">ca-app-pub-3459182657144294/9588188768</string>
    <string name="ga_trackingId">UA-71972659-1</string>
    <string name="title_activity_inter_test">InterTest</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

</resources>
